Substituted Java 11 isBlank() method in NetworkModelToCsvMapper